wp_contextual/tests/error_unexpected_wp_context_token.stderr
error: Expected #[WpContext(edit, embed, view)], found unsupported tokens
 --> tests/error_unexpected_wp_context_token.rs:5:17
  |
5 |     #[WpContext([edit])]
  |                 ^^^^^^
